--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "cligram"
-version = "0.1.0"
+version = "0.2.0"
 description = "cli based telegram client"
 authors = [
     {name = "Alireza Poodineh",email = "itsaeliux@gmail.com"}
@@ -15,6 +15,34 @@ dependencies = [
     "python-socks[asyncio] (>=2.7.2,<3.0.0)",
     "typer (>=0.20.0,<0.21.0)",
     "pysocks (>=1.7.1,<2.0.0)",
+]
+keywords = ["telegram", "cli", "bot", "automation", "messaging"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3 :: Only",
+    "Topic :: Communications :: Chat",
+    "Topic :: Internet",
+    "Typing :: Typed",
+]
+
+[project.urls]
+Homepage = "https://github.com/Aeliux/cligram"
+Repository = "https://github.com/Aeliux/cligram"
+Issues = "https://github.com/Aeliux/cligram/issues"
+
+[project.optional-dependencies]
+# Performance optimization extras
+speedups = [
+    "cryptg>=0.4.0,<0.5.0",
+    "aiohttp>=3.8.5,<4.0.0",
+    "ujson>=5.8.0,<6.0.0",
+]
+# Media handling
+media = [
+    "pillow>=10.0.0,<11.0.0",
 ]
 
 [dependency-groups]
