--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "cli based telegram client"
 authors = [
     {name = "Alireza Poodineh",email = "itsaeliux@gmail.com"}
 ]
-license = "MIT"
+license = {file = "LICENSE.md"}
 readme = "README.md"
 packages = [{include = "cligram", from = "src"}]
 requires-python = "<4.0,>=3.13"
