--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "cligram"
-version = "0.2.0"
+version = "0.2.5"
 description = "cli based telegram client"
 authors = [
     {name = "Alireza Poodineh",email = "itsaeliux@gmail.com"}
@@ -8,7 +8,7 @@ authors = [
 license = {file = "LICENSE.md"}
 readme = "README.md"
 packages = [{include = "cligram", from = "src"}]
-requires-python = "<4.0,>=3.13"
+requires-python = "<4.0,>=3.12"
 dependencies = [
     "telethon (>=1.41.2,<2.0.0)",
     "tenacity (>=9.1.2,<10.0.0)",
@@ -24,6 +24,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3 :: Only",
     "Topic :: Communications :: Chat",
     "Topic :: Internet",
