--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Run checks
         run: |
           source .venv/bin/activate
-          scripts/check.sh || exit $?
+          scripts/check.py || exit $?
           scripts/cov.py --xml || exit $?
 
       - name: Build
