--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,8 @@ description = "cli based telegram client"
 authors = [
     {name = "Alireza Poodineh",email = "itsaeliux@gmail.com"}
 ]
-license = {file = "LICENSE.md"}
+license-files = ["LICENSE.md"]
 readme = "README.md"
-packages = [{include = "cligram", from = "src"}]
 requires-python = "<4.0,>=3.13"
 dependencies = [
     "telethon (>=1.41.2,<2.0.0)",
@@ -21,7 +20,6 @@ keywords = ["telegram", "cli", "bot", "automation", "messaging"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3 :: Only",
     "Topic :: Communications :: Chat",
