--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,12 +1,11 @@
 {
 	// See https://go.microsoft.com/fwlink/?LinkId=827846 to learn about workspace recommendations.
 	// Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
-
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
 		"ms-python.python",
-        "ms-python.vscode-pylance",
-        "charliermarsh.ruff",
+		"ms-python.vscode-pylance",
+		"charliermarsh.ruff",
 		"ms-python.black-formatter",
 		"usernamehw.errorlens",
 		"tamasfe.even-better-toml",
@@ -15,6 +14,6 @@
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
-
+		"eamodio.gitlens" // I hate it!
 	]
 }
