Fix linting errors
Signed-off-by: Alireza Poodineh <itsaeliux@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,13 @@
 name: CI/CD
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+      - "refs/tags/v*"
+  pull_request:
+    branches:
+      - main
 
 jobs:
   check:
@@ -13,7 +20,7 @@ jobs:
         id: setup-python
         uses: actions/setup-python@v6
         with:
-          python-version: '3.13'
+          python-version: "3.13"
 
       - name: Install Poetry
         uses: snok/install-poetry@v1.4
