Another try to fix devcontainer
Signed-off-by: Alireza Poodineh <itsaeliux@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,12 @@ name: CI/CD
 
 on:
   push:
+    paths-ignore:
+      - ".github/**"
+      - ".devcontainer/**"
+      - "docs/**"
+      - ".vscode/**"
+      - ".gitignore"
     branches:
       - main
       - "refs/tags/v*"
