--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,10 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/alpine
 {
-	"name": "Alpine",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/base:alpine-3.20",
-	"features": {
-		"ghcr.io/davzucky/devcontainers-features-wolfi/python:1": {
-			"pythonVersion": "3.13"
-		},
-		"ghcr.io/devcontainers-extra/features/poetry:2": {
-			"version": "latest"
-		}
+	// Use the existing Dockerfile to build the container image.
+	"build": {
+		"dockerfile": "Dockerfile",
+		"context": ".."
 	},
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "script/init.py",
@@ -25,7 +19,7 @@
 				"usernamehw.errorlens",
 				"tamasfe.even-better-toml",
 				"matangover.mypy",
-				"donjayamanne.python-environment-manager",
+				"donjayamanne.python-environment-manager"
 			]
 		}
 	}
