--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
 	// Use the existing Dockerfile to build the container image.
 	"build": {
-		"dockerfile": "../Dockerfile",
+		"dockerfile": "Dockerfile",
 		"context": ".."
 	},
 	// Use 'postCreateCommand' to run commands after the container is created.
