--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,6 @@
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
     "python.testing.autoTestDiscoverOnSaveEnabled": true,
-    "editor.formatOnSave": true,
     "editor.formatOnPaste": true,
     "editor.autoIndentOnPaste": true,
     "[python]": {
@@ -17,10 +16,6 @@
             120
         ],
         "editor.tabSize": 4,
-        "editor.codeActionsOnSave": {
-            "source.organizeImports": "explicit",
-            "source.fixAll": "explicit"
-        },
     },
     "files.exclude": {
         "**/__pycache__": true,
@@ -37,5 +32,10 @@
     "files.watcherExclude": {
         "**/__pycache__/**": true,
         "**/.venv/**": true
-    }
+    },
+    // hide information messages from eeror lens
+    "errorLens.enabledDiagnosticLevels": [
+        "error",
+        "warning"
+    ]
 }
