--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "typer (>=0.20.0,<0.21.0)",
     "pysocks (>=1.7.1,<2.0.0)",
     "rich (>=14.2.0,<15.0.0)",
+    "aiofiles (>=25.1.0,<26.0.0)",
+    "cryptography (>=46.0.3,<47.0.0)",
 ]
 keywords = ["telegram", "cli", "bot", "automation", "messaging"]
 classifiers = [
