--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ dev = [
     "pre-commit (>=4.3.0,<5.0.0)",
     "pytest-asyncio (>=1.2.0,<2.0.0)",
     "pytest-cov (>=7.0.0,<8.0.0)",
+    "types-aiofiles (>=25.1.0.20251011,<26.0.0.0)",
 ]
 
 
