Add sphinx docs
Signed-off-by: Alireza Poodineh <itsaeliux@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,10 @@ dev = [
     "pytest-asyncio (>=1.2.0,<2.0.0)",
     "pytest-cov (>=7.0.0,<8.0.0)",
     "types-aiofiles (>=25.1.0.20251011,<26.0.0.0)",
+    "sphinx (>=8.2.3,<9.0.0)",
+    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
+    "sphinx-autodoc-typehints (>=3.5.2,<4.0.0)",
+    "myst-parser (>=4.0.1,<5.0.0)",
 ]
 
 
