--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,8 @@ dev = [
     "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
     "sphinx-autodoc-typehints (>=3.5.2,<4.0.0)",
     "myst-parser (>=4.0.1,<5.0.0)",
+    "pydocstyle (>=6.3.0,<7.0.0)",
+    "interrogate (>=1.7.0,<2.0.0)",
 ]
 
 
@@ -126,9 +128,46 @@ profile = "black"
 
 [tool.ruff]
 line-length = 88
+select = [
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "D",   # pydocstyle (docstring conventions)
+]
+
+[tool.ruff.pydocstyle]
+convention = "google"  # or "numpy", "pep257"
+
+[tool.ruff.per-file-ignores]
+"tests/*" = ["D"]  # Don't require docstrings in tests
 
 [tool.mypy]
 files = ["src"]
 exclude = "src/cligram/utils/device.py"
 ignore_missing_imports = true
 check_untyped_defs = true
+
+[tool.pydocstyle]
+convention = "google"  # or "numpy", "pep257"
+# add-ignore = ["D100", "D104"]  # Ignore missing docstrings in __init__.py
+match = "(?!test_).*\\.py"  # Don't check test files
+match-dir = "^(?!tests).*"  # Don't check tests directory
+
+[tool.interrogate]
+ignore-init-method = true
+ignore-init-module = false
+ignore-magic = false
+ignore-semiprivate = false
+ignore-private = false
+ignore-property-decorators = false
+ignore-module = false
+ignore-nested-functions = false
+ignore-nested-classes = false
+ignore-setters = false
+fail-under = 80  # Fail if coverage is below 80%
+exclude = ["setup.py", "docs", "build", "tests"]
+ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
+verbose = 0
+quiet = false
+whitelist-regex = []
+color = true
