--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ dev = [
     "myst-parser (>=4.0.1,<5.0.0)",
     "pydocstyle (>=6.3.0,<7.0.0)",
     "interrogate (>=1.7.0,<2.0.0)",
+    "sphinx-autobuild (>=2025.8.25,<2026.0.0)",
 ]
 
 
