--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,10 +43,8 @@ speedups = [
     "cryptg>=0.4.0,<0.5.0",
     "aiohttp>=3.8.5,<4.0.0",
     "ujson>=5.8.0,<6.0.0",
-]
-# Media handling
-media = [
     "pillow>=10.0.0,<11.0.0",
+    "hachoir (>=3.3.0,<4.0.0)",
 ]
 
 [dependency-groups]
