--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,10 +48,27 @@ jobs:
         run: poetry install --no-interaction
 
       - name: Run checks
+        id: checks
         run: |
           source .venv/bin/activate
           scripts/check.py || exit $?
-          scripts/cov.py --xml || exit $?
+          scripts/cov.py --xml --junit || exit $?
+
+      - name: Upload coverage
+        if: ${{ always() }}
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+
+      - name: Upload test results to Codecov
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Verify checks passed
+        if: steps.checks.outcome == 'failure'
+        run: exit 1
 
       - name: Build
         run: poetry build
@@ -62,12 +79,6 @@ jobs:
         with:
           name: dist-${{ github.sha }}
           path: dist/
-
-      - name: Upload coverage
-        uses: codecov/codecov-action@v5
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          fail_ci_if_error: true
 
   release:
     needs: check
