--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,6 +128,8 @@ profile = "black"
 
 [tool.ruff]
 line-length = 88
+
+[tool.ruff.lint]
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
@@ -135,11 +137,12 @@ select = [
     "D",   # pydocstyle (docstring conventions)
 ]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"  # or "numpy", "pep257"
 
-[tool.ruff.per-file-ignores]
-"tests/*" = ["D"]  # Don't require docstrings in tests
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["D"]
+"scripts/*" = ["D"]
 
 [tool.mypy]
 files = ["src"]
