--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,13 +62,10 @@ jobs:
           fail_ci_if_error: true
 
       - name: Upload test results to Codecov
+        if: ${{ always() }}
         uses: codecov/test-results-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-
-      - name: Verify checks passed
-        if: steps.checks.outcome == 'failure'
-        run: exit 1
 
       - name: Build
         run: poetry build
