--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,8 @@
     "errorLens.enabledDiagnosticLevels": [
         "error",
         "warning"
+    ],
+    "github-actions.workflows.pinned.workflows": [
+        ".github/workflows/main.yml"
     ]
 }
