--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
 [project]
 name = "cligram"
-version = "0.3.3"
 description = "cli based telegram client"
 authors = [
     {name = "Alireza Poodineh",email = "itsaeliux@gmail.com"}
@@ -28,6 +27,7 @@ classifiers = [
     "Topic :: Internet",
     "Typing :: Typed",
 ]
+dynamic = ["version"]
 
 [project.scripts]
 cligram = "cligram.cli:main"
@@ -72,9 +72,33 @@ dev = [
 ]
 
 
+[tool.poetry]
+version = "0.0.0"
+
+[tool.poetry.requires-plugins]
+poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
+
+
+[tool.poetry-dynamic-versioning]
+enable = true
+vcs = "git"
+metadata = true
+tagged-metadata = true
+style = "pep440"
+strict = true
+ignore-untracked = true
+
+[tool.poetry-dynamic-versioning.files."src/cligram/_gen_version.py"]
+persistent-substitution = true
+initial-content = """
+  # These version placeholders will be replaced later during build.
+  __version__ = "0.0.0"
+  __version_tuple__ = (0, 0, 0)
+"""
+
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
+build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
