--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,6 +4,11 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.13"
+  jobs:
+    post_checkout:
+      - git fetch --unshallow || true
+    post_install:
+      - poetry dynamic-versioning
 
 sphinx:
   configuration: docs/source/conf.py
