--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,4 +2,4 @@ sphinx>=8.2.3,<9.0.0
 sphinx-rtd-theme>=3.0.2,<4.0.0
 sphinx-autodoc-typehints>=3.5.2,<4.0.0
 myst-parser>=4.0.1,<5.0.0
-poetry==2.2.1
+poetry-dynamic-versioning>=1.0.0,<2.0.0
