--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,18 +56,20 @@ dev = [
     "isort (>=7.0.0,<8.0.0)",
     "pip-audit (>=2.9.0,<3.0.0)",
     "bandit (>=1.8.6,<2.0.0)",
-    "python-dotenv (>=1.2.1,<2.0.0)",
+    # "python-dotenv (>=1.2.1,<2.0.0)",
     "ruff (>=0.14.3,<0.15.0)",
     "pre-commit (>=4.3.0,<5.0.0)",
     "pytest-asyncio (>=1.2.0,<2.0.0)",
     "pytest-cov (>=7.0.0,<8.0.0)",
     "types-aiofiles (>=25.1.0.20251011,<26.0.0.0)",
+    "pydocstyle (>=6.3.0,<7.0.0)",
+    "interrogate (>=1.7.0,<2.0.0)",
+]
+docs = [
     "sphinx (>=8.2.3,<9.0.0)",
     "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
     "sphinx-autodoc-typehints (>=3.5.2,<4.0.0)",
     "myst-parser (>=4.0.1,<5.0.0)",
-    "pydocstyle (>=6.3.0,<7.0.0)",
-    "interrogate (>=1.7.0,<2.0.0)",
     "sphinx-autobuild (>=2025.8.25,<2026.0.0)",
 ]
 
