--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "rich (>=14.2.0,<15.0.0)",
     "aiofiles (>=25.1.0,<26.0.0)",
     "cryptography (>=46.0.3,<47.0.0)",
+    "python-dotenv (>=1.2.1,<2.0.0)",
 ]
 keywords = ["telegram", "cli", "bot", "automation", "messaging"]
 classifiers = [
@@ -56,7 +57,6 @@ dev = [
     "isort (>=7.0.0,<8.0.0)",
     "pip-audit (>=2.9.0,<3.0.0)",
     "bandit (>=1.8.6,<2.0.0)",
-    # "python-dotenv (>=1.2.1,<2.0.0)",
     "ruff (>=0.14.3,<0.15.0)",
     "pre-commit (>=4.3.0,<5.0.0)",
     "pytest-asyncio (>=1.2.0,<2.0.0)",
