--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "aiofiles (>=25.1.0,<26.0.0)",
     "cryptography (>=46.0.3,<47.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
+    "questionary (>=2.1.1,<3.0.0)",
 ]
 keywords = ["telegram", "cli", "bot", "automation", "messaging"]
 classifiers = [
