--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ readme = "README.md"
 requires-python = "<4.0,>=3.11"
 dependencies = [
     "telethon (>=1.41.2,<2.0.0)",
-    "tenacity (>=9.1.2,<10.0.0)",
     "python-socks[asyncio] (>=2.7.2,<3.0.0)",
     "typer (>=0.20.0,<0.21.0)",
     "pysocks (>=1.7.1,<2.0.0)",
@@ -47,7 +46,7 @@ speedups = [
     "aiohttp>=3.8.5,<4.0.0",
     "ujson>=5.8.0,<6.0.0",
     "pillow>=10.0.0,<11.0.0",
-    "hachoir (>=3.3.0,<4.0.0)",
+    "hachoir>=3.3.0,<4.0.0",
 ]
 
 [dependency-groups]
