Fix error caused by name collision
Signed-off-by: Alireza Poodineh <itsaeliux@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,7 +87,7 @@ exclude = [
 version = "0.0.0"
 
 [tool.poetry.build]
-script = "build.py"
+script = "cligram_build.py"
 
 
 [tool.poetry.requires-plugins]
