--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -3,30 +3,49 @@ name: Build Wheels
 on: [push, pull_request]
 
 jobs:
-  build_wheels:
-    name: Build wheels on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, windows-11-arm, macos-15-intel, macos-latest]
+    build_wheels:
+        name: Build wheels for ${{ matrix.os }}
+        runs-on: ${{ matrix.runs-on }}
+        strategy:
+          matrix:
+            include:
+              - os: linux-intel
+                runs-on: ubuntu-latest
+              - os: linux-arm
+                runs-on: ubuntu-24.04-arm
+              - os: windows-intel
+                runs-on: windows-latest
+              - os: windows-arm
+                runs-on: windows-11-arm
+              - os: macos-intel
+                # macos-15-intel is the last x86_64 runner
+                runs-on: macos-15-intel
+              - os: macos-arm
+                # macos-14+ (including latest) are ARM64 runners
+                runs-on: macos-latest
+              - os: android-intel
+                runs-on: ubuntu-latest
+                platform: android
+              - os: android-arm
+                runs-on: ubuntu-latest
+                platform: android
+                archs: arm64_v8a
+              - os: ios
+                runs-on: macos-latest
+                platform: ios
+              - os: pyodide
+                runs-on: ubuntu-latest
+                platform: pyodide
 
-    steps:
-      - uses: actions/checkout@v5
+        steps:
+          - uses: actions/checkout@v5
 
-      # Used to host cibuildwheel
-      - uses: actions/setup-python@v5
-
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==3.3.0
-
-      - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
-        # to supply options, put them in 'env', like:
-        # env:
-        #   CIBW_SOME_OPTION: value
-        #   ...
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
-          path: ./wheelhouse/*.whl
+          - name: Build wheels
+            uses: pypa/cibuildwheel@v3.3.0
+            env:
+              CIBW_PLATFORM: ${{ matrix.platform || 'auto' }}
+              CIBW_ARCHS: ${{ matrix.archs || 'auto' }}
+          - uses: actions/upload-artifact@v4
+            with:
+              name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
+              path: ./wheelhouse/*.whl
