--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,7 +95,7 @@ poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
 
 
 [tool.poetry-dynamic-versioning]
-enable = false
+enable = true
 vcs = "git"
 metadata = true
 tagged-metadata = true
