--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,5 +42,6 @@
     ],
     "github-actions.workflows.pinned.workflows": [
         ".github/workflows/main.yml"
-    ]
+    ],
+    "mypy.runUsingActiveInterpreter": true
 }
