Add tag trigger to push event
Signed-off-by: Alireza Poodineh <itsaeliux@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,8 @@ on:
       - ".gitignore"
     branches:
       - main
-      - "refs/tags/v*"
+    tags:
+      - "v*"
   pull_request:
     branches:
       - main
