--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -129,6 +129,9 @@ jobs:
     name: Publish to PyPI
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Download build artifacts
         uses: actions/download-artifact@v6
